<resources>
    <string name="app_name">VSthetics</string>
    <string-array name="roles_array">
        <item>Admin</item>
        <item>Empleado</item>
    </string-array>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="open_drawer">Abrir Menú</string>
    <string name="close_drawer">Cerrar Menú</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_citas_admin">Citas (ADMIN)</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="menu_gallery">Citas</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_citascliente">Mis Citas</string>
    <string name="menu_pagos">Pagos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_add_appointment">Agregar nueva cita</string>

    <string-array name="cita_estados">
        <item>Cancelado</item>
        <item>Pendiente</item>
        <item>Agendado</item>
        <item>Completado</item>
    </string-array>

    <string-array name="cita_estados_filtro">
        <item>Todo</item>
        <item>Cancelado</item>
        <item>Pendiente</item>
        <item>Agendado</item>
        <item>Completado</item>
    </string-array>
    <string-array name="filtro_fecha_opciones">
        <item>desde el principio</item>
        <item>Hoy</item>
        <item>Esta semana</item>
        <item>Este mes</item>
        <item>Personalizado...</item>
    </string-array>

        <string-array name="metodos_pago">
            <item>Tarjeta</item>
            <item>Efectivo</item>
            <item>Transferencia</item>
            <item>Cheque</item>
        </string-array>

        <string-array name="estado_pagos">
            <item>Pendiente</item>
            <item>Completado</item>
            <item>Fallido</item>
        </string-array>



</resources>