<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/hogar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_citas"
            android:icon="@drawable/calendario"
            android:title="@string/menu_citas_admin" />
        <item
            android:id="@+id/nav_citascliente"
            android:icon="@drawable/calendario"
            android:title="@string/menu_citascliente" />

        <item
            android:id="@+id/nav_pagos"
            android:icon="@drawable/pago"
            android:title="@string/menu_pagos" />

    </group>
</menu>